--- a/libros/templates/libros/agregar_libro.html
+++ b/libros/templates/libros/agregar_libro.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Agregar libro</h1>
-  <form method="post">
-    <input type="text" name="titulo" placeholder="Título" required><br><br>
-    <input type="number" name="anio_publicacion" placeholder="Año de publicación" required><br><br>
-    <input type="text" name="editorial" placeholder="Editorial" required><br><br>
-    <input type="text" name="autor" placeholder="Autor" required><br><br>
-    <input type="submit" value="Agregar">
-  </form>
+<h1>Agregar libro</h1>
+<form method="post">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type="submit" value="Agregar">
+</form>
 {% endblock %}
